# weather_dashboard

./: README.md  pyproject.toml
src/weather_dashboard/: __init__.py  api.py  icons.py  main.py
